--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@vee-validate/yup": "^4.9.3",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "firebase": "^9.16.0",
